Sigh... fix hme.html on mobile

--- a/static/site/css/base.css
+++ b/static/site/css/base.css
@@ -218,11 +218,6 @@ a:focus-visible {
     display: flex;
 }
 
-/* Make first card span full width */
-.fixed-grid .grid > .cell:first-child {
-    grid-column: span 2;
-}
-
 /* Hero improvements */
 .hero .level {
     max-width: 600px;
